--- a/contact/pray.html
+++ b/contact/pray.html
@@ -98,7 +98,7 @@
       </div>
     <div class="prayer-request-container">
      <div class="prayer-request-card">
-      <form
+     <form
   id="prayerForm"
   action="https://docs.google.com/forms/d/e/1FAIpQLScSk2nP6135-2BRWWIseYDiOn5-dcSZxpGv2DS2bPE6EPMWrA/formResponse"
   method="POST"
@@ -110,6 +110,7 @@
       type="text"
       name="entry.1480419693"
       class="form-control"
+      placeholder="กรอกชื่อของคุณ"
       required
     >
   </div>
@@ -120,6 +121,7 @@
       type="email"
       name="entry.168755387"
       class="form-control"
+      placeholder="your@email.com"
     >
   </div>
 
@@ -129,6 +131,7 @@
       name="entry.956990530"
       class="form-control"
       rows="6"
+      placeholder="แบ่งปันสิ่งที่ต้องการให้เราอธิษฐานเผื่อ..."
       required
     ></textarea>
   </div>
@@ -138,11 +141,11 @@
   </button>
 </form>
 
-<iframe
-  name="hidden_iframe"
-  id="hidden_iframe"
-  style="display:none;"
-></iframe>
+<!-- กล่องข้อความหลังส่ง -->
+<div id="prayerSuccess" class="form-success">
+  <strong>✅ ส่งคำขออธิษฐานสำเร็จ!</strong><br>
+  เราจะอธิษฐานเผื่อคุณ พระเจ้าทรงรักคุณ ❤️
+</div>
 
      </div>
      <div class="prayer-info-card">
@@ -167,28 +170,33 @@
   </section>
   </main>
  <div data-include="https://www.tannatthaphon.online/partials/footer.html"></div>
- <script>
-const form = document.getElementById("prayerForm");
-const successBox = document.getElementById("prayerSuccess");
-const iframe = document.getElementById("hidden_iframe");
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  const form = document.getElementById("prayerForm");
+  const successBox = document.getElementById("prayerSuccess");
+  const iframe = document.getElementById("hidden_iframe");
 
-// ซ่อนข้อความไว้ก่อน
-successBox.style.display = "none";
+  if (!form || !successBox || !iframe) return;
 
-// เมื่อ Google Form ส่งเสร็จ (iframe โหลด)
-iframe.onload = function () {
-  // เคลียร์ฟอร์ม
-  form.reset();
+  // ซ่อนข้อความไว้ก่อน
+  successBox.style.display = "none";
 
-  // แสดงข้อความสำเร็จ
-  successBox.style.display = "block";
+  // เมื่อ Google Form ส่งเสร็จ (iframe โหลด)
+  iframe.onload = () => {
+    // เคลียร์ฟอร์ม
+    form.reset();
 
-  // ซ่อนข้อความหลัง 5 วินาที
-  setTimeout(() => {
-    successBox.style.display = "none";
-  }, 5000);
-};
+    // แสดงข้อความ “เราจะอธิษฐานเผื่อคุณ”
+    successBox.style.display = "block";
+
+    // ซ่อนหลัง 5 วินาที
+    setTimeout(() => {
+      successBox.style.display = "none";
+    }, 5000);
+  };
+});
 </script>
+
 
 
   <script src="https://www.tannatthaphon.online/js/main.js"></script>
@@ -200,6 +208,7 @@ iframe.onload = function () {
     </body>
 
 </html>
+
 
 
 
