--- a/contact/information.html
+++ b/contact/information.html
@@ -129,6 +129,31 @@
 </div>
     
   </section>
+   <div>  test โหลดไฟล์ 
+     <a 
+  href="https://www.tannatthaphon.online/ตารางเวลาประจำสัปดาห์.docx" 
+  download 
+  class="download-btn">
+  ⬇ ดาวน์โหลดตารางเวลาประจำสัปดาห์ (DOCX)
+</a>
+    <style>
+     .download-btn {
+  display: inline-block;
+  padding: 14px 22px;
+  background: #0ea5e9;
+  color: #fff;
+  border-radius: 12px;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.download-btn:hover {
+  background: #0284c7;
+}
+
+    </style>
+   </div>
+
   </main>
   <div data-include="https://www.tannatthaphon.online/partials/footer.html"></div>
   <script>
@@ -144,3 +169,4 @@
     </body>
 
 </html>
+
