--- a/contact/information.html
+++ b/contact/information.html
@@ -136,6 +136,12 @@
   class="download-btn">
   ⬇ ดาวน์โหลดตารางเวลาประจำสัปดาห์ (DOCX)
 </a>
+    <a 
+  href="https://www.tannatthaphon.online/ตารางเวลาประจำสัปดาห์.pdf" 
+  download 
+  class="download-btn">
+  ⬇ ดาวน์โหลดตารางเวลาประจำสัปดาห์ (DOCX)
+</a>
     <style>
      .download-btn {
   display: inline-block;
@@ -169,4 +175,5 @@
     </body>
 
 </html>
+
 
