--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>คริสตจักรสาวกพระเยซูกรุงเทพ | หน้าแรก</title>
+  <title>JDM Bangkok Church | คริสตจักรสาวกพระเยซูกรุงเทพ</title>
   <meta name="description" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) คริสตจักรท้องถิ่นย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://www.tannatthaphon.online/">
@@ -26,6 +26,8 @@
   <meta name="twitter:description" content="นมัสการวันอาทิตย์ 10:00–12:00 น.">
   <meta name="twitter:image" content="https://www.tannatthaphon.online/og-cover.webp">
   <link rel="icon" type="image/png" sizes="16x16" href="https://www.tannatthaphon.online/assets/images/favicon-16x16.png">
+  <link rel="icon" href="https://www.tannatthaphon.online/assets/images/favicon-48x48.png" sizes="48x48" type="image/png">
+  <link rel="icon" href="https://www.tannatthaphon.online/assets/images/favicon-96x96.png" sizes="96x96" type="image/png">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
   <link rel="icon" type="image/svg+xml" href="https://www.tannatthaphon.online/assets/images/faicon.svg">
@@ -227,6 +229,7 @@
     </body>
 
 </html>
+
 
 
 
