--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
     <img src="https://www.tannatthaphon.online/assets/images/faicon.svg" alt="โลโก้คริสตจักรสาวกพระเยซูกรุงเทพ" class="hero-icon">
     <h1>รู้จักพระเยซูคริสต์</h1>
     <p>ค้นพบความรัก ความหวัง และชีวิตใหม่ในพระองค์</p>
-    <div class="cta-buttons"><a href="#who" class="btn btn-primary">✝️ พระเยซูคือใคร</a> <a href="#salvation" class="btn btn-outline">💝 รับความรอด</a>
+    <div class="cta-buttons"><a href="#who" class="btn btn-primary">พระเยซูคือใคร</a> <a href="#salvation" class="btn btn-outline">รับความรอด</a>
     </div>
    </div>
   </div><!-- Who is Jesus Section -->
   <section id="who">
    <div class="container">
-    <h2 class="section-title">✝️ พระเยซูคริสต์คือใคร</h2>
+    <h2 class="section-title">พระเยซูคริสต์คือใคร</h2>
     <div class="intro-card">
      <h3>พระบุตรของพระเจ้า ผู้ช่วยให้รอดของโลก</h3>
      <p>พระเยซูคริสต์คือพระบุตรของพระเจ้า ผู้ทรงสร้างสวรรค์และแผ่นดินโลก พระองค์ทรงรักมนุษย์มากจนยอมสละพระชนม์ชีพบนไม้กางเขน เพื่อรับโทษแทนบาปของเราทุกคน</p>
@@ -112,29 +112,25 @@
   </section><!-- Why Jesus Section -->
   <section style="background: var(--surface-dark);">
    <div class="container">
-    <h2 class="section-title">💝 ทำไมเราจึงต้องการพระเยซู</h2>
+    <h2 class="section-title">ทำไมเราจึงต้องการพระเยซู</h2>
     <div class="why-grid">
-     <div class="why-card"><span class="why-icon">💔</span>
       <h3>เราทุกคนมีบาป</h3>
       <p>ทุกคนล้วนทำบาปและห่างไกลจากพระเจ้า ไม่มีใครสมบูรณ์แบบ บาปทำให้เราแยกจากพระเจ้าและนำไปสู่ความตาย</p>
      </div>
-     <div class="why-card"><span class="why-icon">✝️</span>
       <h3>พระเยซูจ่ายค่าไถ่</h3>
       <p>พระเจ้าทรงรักเรามาก จึงส่งพระเยซูมาตายแทนเรา พระองค์รับโทษบาปของเราทั้งหมด เพื่อเราจะได้รอด</p>
      </div>
-     <div class="why-card"><span class="why-icon">🎁</span>
       <h3>ของประทานฟรี</h3>
       <p>ความรอดเป็นของประทานจากพระเจ้า ไม่ใช่สิ่งที่เราทำได้ด้วยตัวเอง เราได้รับโดยความเชื่อในพระเยซูเท่านั้น</p>
      </div>
-     <div class="why-card"><span class="why-icon">🕊</span>
       <h3>สันติสุขที่แท้จริง</h3>
       <p>เมื่อเรารับพระเยซู เราจะได้รับสันติสุข ความชื่นชมยินดี และชีวิตที่มีความหมายในพระองค์</p>
      </div>
-     <div class="why-card"><span class="why-icon">👨‍👩‍👧‍👦</span>
+ 
       <h3>เป็นบุตรของพระเจ้า</h3>
       <p>เราจะกลายเป็นบุตรของพระเจ้า มีความสัมพันธ์ใกล้ชิดกับพระองค์ และมีครอบครัวฝ่ายวิญญาณที่รักเรา</p>
      </div>
-     <div class="why-card"><span class="why-icon">👑</span>
+     
       <h3>ชีวิตนิรันดร์</h3>
       <p>เราจะได้รับชีวิตนิรันดร์กับพระเจ้าในสวรรค์ ไม่มีความเจ็บปวด ไม่มีน้ำตา มีแต่ความสุขตลอดไป</p>
      </div>
@@ -143,7 +139,7 @@
   </section><!-- How to be Saved Section -->
   <section id="salvation">
    <div class="container">
-    <h2 class="section-title">🙏 จะรับพระเยซูได้อย่างไร</h2>
+    <h2 class="section-title">จะรับพระเยซูได้อย่างไร</h2>
     <div class="steps-container">
      <div class="step-card">
       <div class="step-number">
@@ -199,7 +195,7 @@
   <section style="background: var(--surface-dark);">
    <div class="container">
     <div class="prayer-box">
-     <h3>🙏 คำอธิษฐานรับพระเยซู</h3>
+     <h3>คำอธิษฐานรับพระเยซู</h3>
      <p class="prayer-cta">หากคุณพร้อมที่จะรับพระเยซูเข้ามาในชีวิต คุณสามารถอธิษฐานตามคำนี้:</p>
      <div class="prayer-text">
       <p style="margin-bottom: 15px;"><strong>ข้าแต่พระเจ้า</strong></p>
@@ -210,7 +206,7 @@
       <p style="margin-top: 20px;"><strong>ในพระนามพระเยซูคริสต์ อาเมน</strong></p>
      </div>
      <p style="font-size: 1.1rem; line-height: 1.8;">หากคุณได้อธิษฐานคำนี้ด้วยความจริงใจ<br>
-       ยินดีต้อนรับสู่ครอบครัวของพระเจ้า! 🎉<br>
+       ยินดีต้อนรับสู่ครอบครัวของพระเจ้า!<br>
        คุณเป็นบุตรของพระเจ้าแล้ว และมีชีวิตนิรันดร์</p>
     </div>
    </div>
