--- a/about/vision.html
+++ b/about/vision.html
@@ -3,19 +3,19 @@
  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>คริสตจักรสาวกพระเยซูกรุงเทพ | นิมิตและพัธกิจ</title>
-  <meta name="description" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) คริสตจักรท้องถิ่นย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.">
+  <title>นิมิตและพันธกิจ | คริสตจักรสาวกพระเยซูกรุงเทพ (jdmbangkok)</title>
+  <meta name="description" content="นิมิตและพันธกิจของ คริสตจักรสาวกพระเยซูกรุงเทพ (jdmbangkok)">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://www.tannatthaphon.online/">
+  <link rel="canonical" href="https://www.tannatthaphon.online/about/vision.html">
   <meta name="author" content="Natthaphon Jaroenthat">
   <meta name="geo.region" content="TH-10">
   <meta name="geo.placename" content="Bang Kapi, Bangkok">
   <meta name="geo.position" content="13.753303;100.619074">
   <meta name="ICBM" content="13.753303, 100.619074">
-  <meta property="og:title" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok)">
-  <meta property="og:description" content="คริสตจักรท้องถิ่นย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.">
+  <meta property="og:title" content="นิมิตและพันธกิจ | คริสตจักรสาวกพระเยซูกรุงเทพ (jdmbangkok)">
+  <meta property="og:description" content="นิมิตและพันธกิจของ คริสตจักรสาวกพระเยซูกรุงเทพ (jdmbangkok)">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.tannatthaphon.online/">
+  <meta property="og:url" content="https://www.tannatthaphon.online/about/vision.html">
   <meta property="og:image" content="https://www.tannatthaphon.online/og-cover.webp">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -25,15 +25,17 @@
   <meta name="twitter:title" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok)">
   <meta name="twitter:description" content="นมัสการวันอาทิตย์ 10:00–12:00 น.">
   <meta name="twitter:image" content="https://www.tannatthaphon.online/og-cover.webp">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://www.tannatthaphon.online/assets/images/favicon-16x16.png">
+  <link rel="icon" href="https://www.tannatthaphon.online/assets/images/favicon-48x48.png" sizes="48x48" type="image/png">
+  <link rel="icon" href="https://www.tannatthaphon.online/assets/images/favicon-96x96.png" sizes="96x96" type="image/png">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
-  <link rel="icon" type="image/svg+xml" href="favicon.svg">
-  <link rel="shortcut icon" href="favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/svg+xml" href="https://www.tannatthaphon.online/assets/images/faicon.svg">
+  <link rel="shortcut icon" href="https://www.tannatthaphon.online/assets/images/faicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://www.tannatthaphon.online/assets/images/apple-touch-icon.png">
   <meta name="apple-mobile-web-app-title" content="JDM BKK">
-  <link rel="manifest" href="../assets/images/site.webmanifest">
-  <script src="../js/sdk.js"></script>
+  <link rel="manifest" href="https://www.tannatthaphon.online/assets/images/site.webmanifest">
+  <script src="https://www.tannatthaphon.online/js/sdk.js"></script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -42,9 +44,9 @@
     "name": "คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok)",
     "alternateName": ["JDM Bangkok", "JDMBKK", "JDM TH"],
     "description": "คริสตจักรท้องถิ่นย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.",
-    "url": "https://www.tannatthaphon.online/",
-    "logo": "https://www.tannatthaphon.online/logo.png",
-    "image": "https://www.tannatthaphon.online/cover.webp",
+    "url": "https://www.tannatthaphon.online/about/vision.html",
+    "logo": "https://www.tannatthaphon.online/assets/images/faicon.svg",
+    "image": "https://www.tannatthaphon.online/og-cover.webp",
     "telephone": "+66 92 552 0263",
     "hasMap": "https://maps.google.com/?q=13.753303,100.619074",
     "address": {
@@ -70,7 +72,9 @@
 <link rel="stylesheet" href="https://www.tannatthaphon.online/css/print.css" media="print">
 <link rel="stylesheet" href="https://www.tannatthaphon.online/css/variables.css">
 <link rel="stylesheet" href="https://www.tannatthaphon.online/css/home.css">
-  <style>@view-transition { navigation: auto; }</style> 
+  <style>@view-transition { navigation: auto; }
+</style> 
+
  </head>
  <body>
   <div data-include="https://www.tannatthaphon.online/partials/header.html"></div>
@@ -86,10 +90,156 @@
        MAIN BODY CONTENT (ส่วนเนื้อหาหลัก)
   ======================================== -->
   <main class="main-content">
-    <h1>นี่คือหน้านิมิตและพัธกิจ</h1>
+  <!-- How to be Saved Section -->
+  <section>
+  <div class="container">
+  <div class="section-title">
+    <h1>
+  นิมิตและพันธกิจ<br>
+  <small>ของคริสตจักรสาวกพระเยซูกรุงเทพ</small>
+</h1>
+
+  </div>
+
+  <div class="steps-container">
+
+
+     <div class="step-card">
+  <div class="step-number">1</div>
+
+  <div class="step-content">
+    <h3>คริสตจักรคืออะไร? (มัทธิว 16:15–18, 1 โครินธ์ 1:2)</h3>
+
+    <p><b>นิยามของคริสตจักร</b> : คริสตจักรคือการรวมตัวกันของผู้ที่เชื่อและติดตามพระเยซูคริสต์ 
+    ในฐานะพระผู้ช่วยให้รอดและองค์พระผู้เป็นเจ้า</p>
+
+    <p><b>ศีรษะของคริสตจักร</b> : พระเยซูคริสต์ทรงเป็นศีรษะของคริสตจักร 
+    ผู้ทรงทนทุกข์และสิ้นพระชนม์บนไม้กางเขนเพื่อไถ่บาปแทนเรา 
+    และทรงฟื้นคืนพระชนม์จากความตายในวันที่สาม</p>
+
+    <p><b>อวัยวะของคริสตจักร</b> : ผู้เชื่อแต่ละคนที่ติดตามพระเยซูคริสต์ 
+    ผู้ทรงฟื้นคืนพระชนม์ เป็นอวัยวะและส่วนประกอบของพระกายของพระคริสต์ 
+    ซึ่งก็คือคริสตจักร</p>
+
+    <p><b>บทบาทของคริสตจักร</b> : คริสตจักรถูกตั้งขึ้นในโลกโดยผ่านทางพระเยซูคริสต์ 
+    เพื่อเป็นเครื่องมือและสถาบันที่มีชีวิตของพระเจ้า 
+    ในการประกาศความรอดของพระองค์สู่คนทั้งปวง</p>
+  </div>
+</div>
+
+     <div class="step-card">
+  <div class="step-number">2</div>
+
+  <div class="step-content">
+    <h3>พันธกิจของคริสตจักรคืออะไร? (มัทธิว 28:16–20)</h3>
+
+    <p><b>พระมหาบัญชา (The Great Commission)</b> : คือพระบัญชาสุดท้ายที่พระเยซูคริสต์
+    ทรงสั่งและมอบหมายแก่เหล่าสาวกก่อนเสด็จกลับสู่สวรรค์ 
+    ซึ่งถือเป็น “การมอบอำนาจครั้งยิ่งใหญ่” 
+    หรือ “พันธกิจอันยิ่งใหญ่ของงานธรรมทูต”</p>
+
+    <p><b>หัวใจสำคัญ</b> : คริสตจักรถูกเรียกให้ออกไปหาชนทุกชาติทั่วโลก 
+    เพื่อประกาศข่าวประเสริฐและสร้างพวกเขาให้เป็นสาวกของพระเยซูคริสต์ 
+    นี่คือพันธกิจที่แท้จริงของคริสตจักร</p>
+  </div>
+</div>
+     <div class="step-card">
+  <div class="step-number">3</div>
+
+  <div class="step-content">
+    <h3>นิมิตและพันธกิจการก่อตั้งคริสตจักรสาวกพระเยซูกรุงเทพ</h3>
+
+    <p><b>การก่อตั้ง</b> : คริสตจักรสาวกพระเยซูกรุงเทพได้ก่อตั้งและเริ่มนมัสการวันอาทิตย์ครั้งแรก 
+    ในสัปดาห์แรกของเดือนกันยายน ปี ค.ศ. 2006</p>
+
+    <p><b>นิมิตการก่อตั้ง</b> : ตามพระธรรมมัทธิว 28:19–20 คือ  
+    <b>“จงออกไปสร้างสาวกจากชนทุกชาติ”</b></p>
+
+    <p><b>หลักการ 3 ประการในการดำเนินตามนิมิต</b></p>
+
+    <p><b>1. การประกาศข่าวประเสริฐ</b> : ในฐานะคริสเตียนที่บังเกิดใหม่ 
+    มีความมั่นใจในความรอด และประกาศข่าวประเสริฐแก่บุคคล ครอบครัว เพื่อน 
+    ในรั้วมหาวิทยาลัย ที่ทำงาน และเพื่อนบ้าน</p>
+
+    <p><b>2. การสร้างสาวก</b> : มอบกรรมสิทธิ์และอำนาจการครอบครองชีวิตแด่พระเยซูคริสต์ 
+    เพื่อเป็นผู้ติดตามและเรียนรู้จากพระองค์</p>
+
+    <p><b>3. พันธกิจโลก</b> : เป็นสาวกที่ซื่อสัตย์ เพื่อสร้างสาวกคนอื่น ๆ 
+    ที่ซื่อสัตย์ต่อไปอย่างต่อเนื่อง (การทวีคูณสาวก)</p>
+  </div>
+</div>
+
+<div class="step-card">
+  <div class="step-number">4</div>
+
+  <div class="step-content">
+    <h3>ค่านิยมหลักในการรับใช้ของคริสตจักรสาวกพระเยซูกรุงเทพ (มัทธิว 13:44–46)</h3>
+
+    <p><b>1. คริสตจักรที่ยึดพระคัมภีร์เป็นศูนย์กลาง</b> : 
+    ดำเนินการรับใช้และตัดสินใจทุกด้านบนพื้นฐานของพระวจนะของพระเจ้า</p>
+
+    <p><b>2. คริสตจักรที่ให้ความสำคัญกับงานพันธกิจเป็นอันดับแรก</b> : 
+    มุ่งเน้นการประกาศข่าวประเสริฐและการขยายแผ่นดินของพระเจ้า</p>
+
+    <p><b>3. คริสตจักรที่สร้างคนงานผ่านการพัฒนาของประทาน</b> : 
+    ส่งเสริมและพัฒนาของประทานฝ่ายวิญญาณของสมาชิกแต่ละคน 
+    เพื่อการรับใช้ที่เกิดผล</p>
+
+    <p><b>4. คริสตจักรที่เน้นกลุ่มย่อยและการนมัสการวันอาทิตย์</b> : 
+    สร้างความสัมพันธ์ การดูแล และการเติบโตฝ่ายจิตวิญญาณอย่างสมดุล</p>
+
+    <p><b>5. คริสตจักรที่มีสุขภาพดีและเต็มไปด้วยความยินดี</b> : 
+    เป็นชุมชนแห่งความรัก ความสามัคคี และความชื่นชมยินดีในพระคริสต์</p>
+  </div>
+</div>
+
+<div class="step-card">
+  <div class="step-number">5</div>
+
+  <div class="step-content">
+    <h3>สถานะคริสตจักรสาวกพระเยซูกรุงเทพ ปี 2026</h3>
+
+    <p><b>สังกัด</b> : องค์กรพันธกิจ JDM Bangkok</p>
+
+    <p><b>คำขวัญประจำปี 2026</b> : 
+    “บากบั่นมุ่งไปสู่หลักชัย” (ฟิลิปปี 3:14)</p>
+
+    <p><b>ปีที่ก่อตั้ง</b> : สัปดาห์แรกของเดือนกันยายน ปี ค.ศ. 2006</p>
+
+    <p><b>ผู้รับใช้</b> : 
+    ศ.จ.ลี ฮยอนแจ, อาจารย์อัน กิลจา, อาจารย์ธรรมวุฒิ, นุ้ย วอล์กเกอร์</p>
+  </div>
+</div>
+
+<div class="step-card">
+  <div class="step-number">6</div>
+
+  <div class="step-content">
+    <h3>โครงสร้างการรับใช้ของคริสตจักร</h3>
+
+    <p><b>ผู้นำกลุ่มย่อย</b> : 
+    คุณหนิง, คุณหลิง, คุณมาย (พี่น้องสตรี), 
+    คุณกันต์, คุณตาล, คุณวอ (พี่น้องบุรุษ)</p>
+
+    <p><b>ทีมนมัสการ</b> : 
+    อาจารย์วุฒิ, คุณแพร, คุณบอม, คุณตาล, 
+    คุณกันต์, คุณมาย, คุณวอ, คุณหญิง, คุณพิ้งกี้</p>
+
+    <p><b>โรงเรียนวันอาทิตย์</b> : 
+    คุณบุ๋ม, คุณแพร</p>
+
+    <p><b>คณะกรรมการก่อสร้าง</b> : 
+    อาจารย์ลี, อาจารย์อัน, อาจารย์วุฒิ, 
+    คุณบุ๋ม, คุณดา, คุณแพร, คุณกันต์</p>
+
+    <p><b>จำนวนสมาชิก</b> : 
+    สมาชิกรับบัพติศมา (  ) คน / 
+    สมาชิกที่มาประจำ (  ) คน</p>
+  </div>
+</div>
+  </section>
   </main>
   <div data-include="https://www.tannatthaphon.online/partials/footer.html"></div>
-
   <script>
     
   </script>
@@ -97,7 +247,8 @@
   <script src="https://www.tannatthaphon.online/js/analytics.js"></script>
   <script src="https://www.tannatthaphon.online/js/form-handler.js"></script>
   <script src="https://www.tannatthaphon.online/js/sdk.js"></script>
-  <script src="https://www.tannatthaphon.online/smooth.js"></script>
+  <script src="https://www.tannatthaphon.online/js/smooth.js"></script>
+  
     </body>
 
 </html>
