--- a/about/vision.html
+++ b/about/vision.html
@@ -6,7 +6,7 @@
   <title>นิมิตและพันธกิจ | คริสตจักรสาวกพระเยซูกรุงเทพ (jdmbangkok)</title>
   <meta name="description" content="นิมิตและพันธกิจของ คริสตจักรสาวกพระเยซูกรุงเทพ (jdmbangkok)">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://www.tannatthaphon.online/about/vision.html">
+  <link rel="canonical" href="https://www.tannatthaphon.online/about/vision">
   <meta name="author" content="Natthaphon Jaroenthat">
   <meta name="geo.region" content="TH-10">
   <meta name="geo.placename" content="Bang Kapi, Bangkok">
@@ -15,7 +15,7 @@
   <meta property="og:title" content="นิมิตและพันธกิจ | คริสตจักรสาวกพระเยซูกรุงเทพ (jdmbangkok)">
   <meta property="og:description" content="นิมิตและพันธกิจของ คริสตจักรสาวกพระเยซูกรุงเทพ (jdmbangkok)">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.tannatthaphon.online/about/vision.html">
+  <meta property="og:url" content="https://www.tannatthaphon.online/about/vision">
   <meta property="og:image" content="https://www.tannatthaphon.online/og-cover.webp">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -44,7 +44,7 @@
     "name": "คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok)",
     "alternateName": ["JDM Bangkok", "JDMBKK", "JDM TH"],
     "description": "คริสตจักรท้องถิ่นย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.",
-    "url": "https://www.tannatthaphon.online/about/vision.html",
+    "url": "https://www.tannatthaphon.online/about/vision",
     "logo": "https://www.tannatthaphon.online/assets/images/faicon.svg",
     "image": "https://www.tannatthaphon.online/og-cover.webp",
     "telephone": "+66 92 552 0263",
@@ -252,3 +252,4 @@
     </body>
 
 </html>
+
