--- a/about/doctrine.html
+++ b/about/doctrine.html
@@ -3,19 +3,19 @@
  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>คริสตจักรสาวกพระเยซูกรุงเทพ | เป้าหมาย</title>
-  <meta name="description" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) คริสตจักรท้องถิ่นย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.">
+  <title>เป้าหมาย | คริสตจักรสาวกพระเยซูกรุงเทพ (jdmbangkok)</title>
+  <meta name="description" content="เป้าหมาย ปี ค.ศ. 2026 ของคริสตจักรสาวกพระเยซูกรุงเทพ (jdmbangkok)">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://www.tannatthaphon.online/">
+  <link rel="canonical" href="https://www.tannatthaphon.online/about/doctrine">
   <meta name="author" content="Natthaphon Jaroenthat">
   <meta name="geo.region" content="TH-10">
   <meta name="geo.placename" content="Bang Kapi, Bangkok">
   <meta name="geo.position" content="13.753303;100.619074">
   <meta name="ICBM" content="13.753303, 100.619074">
-  <meta property="og:title" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok)">
-  <meta property="og:description" content="คริสตจักรท้องถิ่นย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.">
+  <meta property="og:title" content="เป้าหมาย | คริสตจักรสาวกพระเยซูกรุงเทพ (jdmbangkok)">
+  <meta property="og:description" content="เป้าหมาย ปี ค.ศ.2026 ของคริสตจักรสาวกพระเยซูกรุงเทพ (jdmbangkok)">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.tannatthaphon.online/">
+  <meta property="og:url" content="https://www.tannatthaphon.online/about/doctrine">
   <meta property="og:image" content="https://www.tannatthaphon.online/og-cover.webp">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -25,15 +25,17 @@
   <meta name="twitter:title" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok)">
   <meta name="twitter:description" content="นมัสการวันอาทิตย์ 10:00–12:00 น.">
   <meta name="twitter:image" content="https://www.tannatthaphon.online/og-cover.webp">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://www.tannatthaphon.online/assets/images/favicon-16x16.png">
+  <link rel="icon" href="https://www.tannatthaphon.online/assets/images/favicon-48x48.png" sizes="48x48" type="image/png">
+  <link rel="icon" href="https://www.tannatthaphon.online/assets/images/favicon-96x96.png" sizes="96x96" type="image/png">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
-  <link rel="icon" type="image/svg+xml" href="favicon.svg">
-  <link rel="shortcut icon" href="favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/svg+xml" href="https://www.tannatthaphon.online/assets/images/faicon.svg">
+  <link rel="shortcut icon" href="https://www.tannatthaphon.online/assets/images/faicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://www.tannatthaphon.online/assets/images/apple-touch-icon.png">
   <meta name="apple-mobile-web-app-title" content="JDM BKK">
-  <link rel="manifest" href="../assets/images/site.webmanifest">
-  <script src="../js/sdk.js"></script>
+  <link rel="manifest" href="https://www.tannatthaphon.online/assets/images/site.webmanifest">
+  <script src="https://www.tannatthaphon.online/js/sdk.js"></script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -42,9 +44,9 @@
     "name": "คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok)",
     "alternateName": ["JDM Bangkok", "JDMBKK", "JDM TH"],
     "description": "คริสตจักรท้องถิ่นย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.",
-    "url": "https://www.tannatthaphon.online/",
-    "logo": "https://www.tannatthaphon.online/logo.png",
-    "image": "https://www.tannatthaphon.online/cover.webp",
+    "url": "https://www.tannatthaphon.online/about/doctrine",
+    "logo": "https://www.tannatthaphon.online/assets/images/faicon.svg",
+    "image": "https://www.tannatthaphon.online/og-cover.webp",
     "telephone": "+66 92 552 0263",
     "hasMap": "https://maps.google.com/?q=13.753303,100.619074",
     "address": {
@@ -70,7 +72,9 @@
 <link rel="stylesheet" href="https://www.tannatthaphon.online/css/print.css" media="print">
 <link rel="stylesheet" href="https://www.tannatthaphon.online/css/variables.css">
 <link rel="stylesheet" href="https://www.tannatthaphon.online/css/home.css">
-  <style>@view-transition { navigation: auto; }</style> 
+  <style>@view-transition { navigation: auto; }
+</style> 
+
  </head>
  <body>
   <div data-include="https://www.tannatthaphon.online/partials/header.html"></div>
@@ -86,10 +90,233 @@
        MAIN BODY CONTENT (ส่วนเนื้อหาหลัก)
   ======================================== -->
   <main class="main-content">
-    <h1>นี่คือหน้าเป้าหมายปี 2026</h1>
+  <!-- How to be Saved Section -->
+  <section>
+  <div class="container">
+    <div class="section-title">
+      <h1>
+        เป้าหมายปี ค.ศ. 2026<br>
+        <small>ของคริสตจักรสาวกพระเยซูกรุงเทพ</small>
+      </h1>
+    </div>
+
+    <div class="step-card">
+  <div class="step-number">1</div>
+
+  <div class="step-content">
+    <h3>
+      ข้อพระคัมภีร์ประจำองค์กร JDM<br>
+      <small>มัทธิว 28:19–20</small>
+    </h3>
+
+    <p>
+      “เพราะฉะนั้น ท่านทั้งหลายจงออกไปสร้างสาวกจากชนทุกชาติ”
+    </p>
+  </div>
+</div>
+
+
+    <div class="step-card">
+  <div class="step-number">2</div>
+
+  <div class="step-content">
+    <h3>
+      หลักการขององค์กร JDM
+    </h3>
+
+    <p><b>1. Evangelism</b> : การประกาศข่าวประเสริฐ</p>
+    <p><b>2. Discipleship</b> : การสร้างสาวก</p>
+    <p><b>3. World Mission</b> : พันธกิจโลก</p>
+  </div>
+</div>
+
+     <div class="step-card">
+  <div class="step-number">3</div>
+
+  <div class="step-content">
+    <h3>
+      ข้อพระคัมภีร์ประจำปี 2026<br>
+      <small>ฟีลิปปี 3:13–14</small>
+    </h3>
+
+    <p>
+      “พี่น้องทั้งหลาย ข้าพเจ้าไม่ถือว่าข้าพเจ้าได้ฉวยไว้แล้ว 
+      แต่ข้าพเจ้าทำอย่างหนึ่งคือ ลืมสิ่งที่ผ่านพ้นมาแล้ว 
+      และโน้มตัวไปยังสิ่งที่อยู่เบื้องหน้า 
+      ข้าพเจ้าบากบั่นมุ่งไปสู่หลักชัย 
+      เพื่อจะได้รับรางวัลคือการทรงเรียกจากเบื้องบน 
+      ซึ่งมีในพระเยซูคริสต์”
+    </p>
+  </div>
+</div>
+
+<div class="step-card">
+  <div class="step-number">4</div>
+
+  <div class="step-content">
+    <h3>
+      คำขวัญของคริสตจักรสาวกพระเยซูกรุงเทพ ปี 2026
+    </h3>
+
+    <p>
+      “บากบั่นมุ่งไปสู่หลักชัย”
+    </p>
+  </div>
+</div>
+
+
+<div class="step-card">
+  <div class="step-number">5</div>
+
+  <div class="step-content">
+    <h3>
+      เป้าหมาย: พระวจนะและการฝึกอบรมชีวิต
+    </h3>
+
+    <p><b>1.</b> มีชีวิตที่เต็มล้นด้วยพระวิญญาณบริสุทธิ์</p>
+    <p><b>2.</b> เฝ้าเดี่ยวเป็นประจำทุกวัน</p>
+    <p><b>3.</b> อธิษฐานอย่างน้อยวันละ 30 นาที</p>
+    <p><b>4.</b> อ่านพระคัมภีร์จบ 1 รอบ</p>
+
+    <p><b>5.</b> ถวายสิบลดอย่างซื่อสัตย์ และถวายทรัพย์เพื่อการสร้างคริสตจักร  
+    (JDM Bangkok Center)</p>
+
+    <p><b>6.</b> มานมัสการพระเจ้าอย่างสม่ำเสมอครบ 52 สัปดาห์</p>
+    <p><b>7.</b> ท่องจำข้อพระคัมภีร์จำนวน 52 ข้อ</p>
+    <p><b>8.</b> ประกาศข่าวประเสริฐ และพาหนึ่งคนมาคริสตจักร</p>
+    <p><b>9.</b> เข้าร่วมการประชุมกลุ่มย่อยอย่างสม่ำเสมอ</p>
+    <p><b>10.</b> รับใช้ตามของประทาน เพื่อให้คริสตจักรเติบโต</p>
+  </div>
+</div>
+
+
+<div class="step-card">
+  <div class="step-number">6</div>
+
+  <div class="step-content">
+    <h3>ถวายพิเศษประจำปี</h3>
+
+    <p><b>1.</b> วันขึ้นปีใหม่</p>
+    <p><b>2.</b> วันอีสเตอร์</p>
+    <p><b>3.</b> วันขอบคุณพระเจ้า</p>
+    <p><b>4.</b> วันครบรอบคริสตจักร</p>
+    <p><b>5.</b> วันคริสต์มาส</p>
+  </div>
+</div>
+
+  </section>
+
+  <section>
+  <div class="container">
+  <div class="section-title">
+    <h1>
+      สถานะพันธกิจ ปี ค.ศ. 2026<br>
+      <small>ของคริสตจักรสาวกพระเยซูกรุงเทพ</small>
+    </h1>
+  </div>
+
+  <div class="steps-container">
+  <h3>
+    คริสตจักรสาวกพระเยซูคริสต์ กรุงเทพฯ เป็นคริสตจักรที่อยู่ในสังกัดขององค์กร JDM Bangkok
+  </h3>
+</div><br><br>
+
+ 
+
+     <div class="step-card">
+  <div class="step-number">1</div>
+
+  <div class="step-content">
+    <h3>
+      พันธกิจคริสตจักรสาวกพระเยซูคริสต์ กรุงเทพฯ
+    </h3>
+
+    <p><b>คำขวัญประจำปี 2026</b> : 
+      “บากบั่นมุ่งไปสู่หลักชัย” (ฟิลิปปี 3:14)
+    </p>
+
+    <p><b>ปีที่ก่อตั้ง</b> : 
+      ก่อตั้งเมื่อสัปดาห์แรกของเดือนกันยายน ค.ศ. 2006
+    </p>
+
+    <p><b>ผู้รับใช้ (Staff)</b> : 
+      ศ.จ.ลี ฮยอนแจ, อาจารย์อัน กิลจา, อาจารย์ธรรมวุฒิ, คุณนุ้ย (Worker)
+    </p>
+
+    <p><b>พันธกิจในคริสตจักร</b> :</p>
+
+    <p>
+      <b>ผู้นำ (Leader)</b> :<br>
+      (ครู) คุณบุ๋ม, คุณแพร /
+      (คนทำงาน) คุณหนิง, คุณตาล, คุณกันต์ /
+      (นักศึกษา) คุณหลิง, คุณมายด์, คุณวอ
+    </p>
+
+    <p>
+      <b>ผู้นำกลุ่มย่อย (Small Group Leader)</b> :<br>
+      (กลุ่มคู่สมรส) อาจารย์ธรรมวุฒิ /
+      (กลุ่มคนทำงาน) คุณหนิง, คุณกันต์, คุณตาล /
+      (กลุ่มนักศึกษา) อาจารย์ธรรมวุฒิ, คุณนุ้ย, คุณหลิง, คุณมายด์, คุณวอ
+    </p>
+
+    <p>
+      <b>ทีมนมัสการ</b> : 
+      อาจารย์วุฒิ, คุณแพร, คุณบอม, คุณตาล, 
+      คุณกันต์, คุณมายด์, คุณวอ, คุณหญิง, คุณพิ้งกี้
+    </p>
+
+    <p>
+      <b>โรงเรียนวันอาทิตย์</b> : 
+      ครูคุณบุ๋ม, คุณแพร
+    </p>
+
+    <p>
+      <b>คณะกรรมการก่อสร้างโบสถ์ (7 คน)</b> : 
+      อาจารย์ลี, อาจารย์อัน, อาจารย์วุฒิ, 
+      คุณบุ๋ม, คุณดา, คุณแพร, คุณกันต์
+    </p>
+
+    <p>
+      <b>สถานะสมาชิก</b> :<br>
+      สมาชิกรับบัพติศมา (  ) คน / 
+      สมาชิกที่มาโบสถ์ประจำ (  ) คน
+    </p>
+  </div>
+</div>
+
+ <div class="step-card">
+  <div class="step-number">2</div>
+
+  <div class="step-content">
+    <h3>พันธกิจนักศึกษา JDM Bangkok</h3>
+
+    <p>
+      <b>มหาวิทยาลัยรามคำแหง (Ramkhamhaeng University)</b>
+    </p>
+    <p>
+      <b>ผู้รับผิดชอบ</b> : อาจารย์ธรรมวุฒิ, คุณนุ้ย (Worker)<br>
+      <b>ผู้นำนักศึกษา</b> : คุณหลิง, คุณวอ
+    </p>
+
+    <p>
+      <b>สถาบันการจัดการปัญญาภิวัฒน์ (Panyapiwat Institute of Management: PIM)</b>
+    </p>
+    <p>
+      <b>ผู้รับผิดชอบ</b> : อาจารย์ธรรมวุฒิ, คุณนุ้ย (Worker), คุณหญิง, คุณพิ้งกี้
+    </p>
+
+    <p>
+      <b>สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง (KMITL)</b>
+    </p>
+    <p>
+      <b>ผู้รับผิดชอบ</b> : อาจารย์ลี ฮยอนแจ, อาจารย์อัน กิลจา
+    </p>
+  </div>
+</div>
+
+  </section>
   </main>
   <div data-include="https://www.tannatthaphon.online/partials/footer.html"></div>
-
   <script>
     
   </script>
@@ -97,7 +324,8 @@
   <script src="https://www.tannatthaphon.online/js/analytics.js"></script>
   <script src="https://www.tannatthaphon.online/js/form-handler.js"></script>
   <script src="https://www.tannatthaphon.online/js/sdk.js"></script>
-  <script src="https://www.tannatthaphon.online/smooth.js"></script>
+  <script src="https://www.tannatthaphon.online/js/smooth.js"></script>
+  
     </body>
 
 </html>
