--- a/about/doctrine.html
+++ b/about/doctrine.html
@@ -271,7 +271,7 @@
     </p>
 
     <p>
-      <b>คณะกรรมการก่อสร้างโบสถ์ (7 คน)</b> : 
+      <b>คณะกรรมการก่อสร้างโบสถ์</b> : 
       อาจารย์ลี, อาจารย์อัน, อาจารย์วุฒิ, 
       คุณบุ๋ม, คุณดา, คุณแพร, คุณกันต์
     </p>
@@ -329,4 +329,5 @@
     </body>
 
 </html>
+
 
