--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -9,7 +9,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- ใช้ CSS ร่วมกันของเว็บไซต์ -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://www.tannatthaphon.online/css/style.css">
+<link rel="stylesheet" href="https://www.tannatthaphon.online/css/print.css" media="print">
+<link rel="stylesheet" href="https://www.tannatthaphon.online/css/variables.css">
+<link rel="stylesheet" href="https://www.tannatthaphon.online/css/home.css">
 </head>
 <body>
 <main class="container" style="max-width: 900px; margin: 0 auto; padding: 40px 20px;">
@@ -88,4 +91,5 @@
     </p>
 </main>
 </body>
+
 </html>
