--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -9,7 +9,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- ใช้ CSS กลางของเว็บได้ -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://www.tannatthaphon.online/css/style.css">
+<link rel="stylesheet" href="https://www.tannatthaphon.online/css/print.css" media="print">
+<link rel="stylesheet" href="https://www.tannatthaphon.online/css/variables.css">
+<link rel="stylesheet" href="https://www.tannatthaphon.online/css/home.css">
 </head>
 <body>
 
@@ -107,4 +110,5 @@
 </main>
 
 </body>
+
 </html>
