--- a/sermon/index.html
+++ b/sermon/index.html
@@ -110,8 +110,8 @@
 <script>
     // 1. ระบุชื่อไฟล์ที่คุณมี (เรียงจากเก่าไปใหม่ หรืออย่างไรก็ได้)
     const sermonFiles = [
-        "sermons/20260125.html",
-        "sermons/20260202.html"
+        "20260125.html",
+        "20260202.html"
     ];
 
     async function loadSermons() {
@@ -181,6 +181,7 @@
     </body>
 
 </html>
+
 
 
 
