--- a/sermon/sermons/20260125.html
+++ b/sermon/sermons/20260125.html
@@ -11,9 +11,12 @@
 </head>
 <body>
 
-  <h1>ดำเนินชีวิตด้วยความเชื่อ ไม่ใช่ด้วยความกลัว</h1>
-  <p><strong>ผู้เทศนา:</strong> ศจ.สมชาย ใจมั่น</p>
-  <p><strong>วันที่:</strong> 25 มกราคม 2026</p>
+  <!-- ในไฟล์ 20260125.html ส่วนหัวข้อให้ใส่ id แบบนี้ -->
+<h1 id="sermon-title">การเดินในความสว่าง</h1>
+<div class="meta-info">
+    <span id="sermon-date">25 มกราคม 2026</span> | 
+    <span id="sermon-speaker">ศจ. มานะ อดทน</span>
+</div>
 
   <!-- YouTube -->
   <iframe
