--- a/sermon/sermons/20260202.html
+++ b/sermon/sermons/20260202.html
@@ -10,7 +10,13 @@
 </head>
 <body>
 
-  <h1>ชีวิตที่นำโดยพระวิญญาณบริสุทธิ์</h1>
+ <!-- ในไฟล์ 20260125.html ส่วนหัวข้อให้ใส่ id แบบนี้ -->
+<h1 id="sermon-title">sdfdsfdsf</h1>
+<div class="meta-info">
+    <span id="sermon-date">2dsf มกราคม 2026</span> | 
+    <span id="sermon-speaker">ศจ. มานะ อดทน</span>
+</div>
+
 
   <iframe
     width="560"
