--- a/sermon/read.html
+++ b/sermon/read.html
@@ -72,7 +72,7 @@
 
         <!-- ปุ่มย้อนกลับ -->
         <div class="back-nav">
-            <a href="/sermon/sermon.html">← กลับไปหน้ารวมคำเทศนา</a>
+            <a href="/sermon/index.html">← กลับไปหน้ารวมคำเทศนา</a>
         </div>
     </main>
 
@@ -129,4 +129,5 @@ document.addEventListener('allIncludesLoaded', loadSermonDetail);
     </script>
 
 </body>
+
 </html>
