--- a/sermon/read.html
+++ b/sermon/read.html
@@ -1,13 +1,76 @@
-<!DOCTYPE html>
-<html lang="th">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>อ่านคำเทศนา | คริสตจักรสาวกพระเยซูกรุงเทพ</title>
-    <!-- เรียกใช้ไฟล์ CSS พื้นฐาน -->
-    <link rel="stylesheet" href="css/variables.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com" rel="stylesheet">
+<!doctype html>
+<html lang="th" style="height: 100%;">
+ <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>คริสตจักรสาวกพระเยซูกรุงเทพ | เทศนา</title>
+  <meta name="description" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) คริสตจักรท้องถิ่นย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://www.tannatthaphon.online/">
+  <meta name="author" content="Natthaphon Jaroenthat">
+  <meta name="geo.region" content="TH-10">
+  <meta name="geo.placename" content="Bang Kapi, Bangkok">
+  <meta name="geo.position" content="13.753303;100.619074">
+  <meta name="ICBM" content="13.753303, 100.619074">
+  <meta property="og:title" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok)">
+  <meta property="og:description" content="คริสตจักรท้องถิ่นย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.tannatthaphon.online/">
+  <meta property="og:image" content="https://www.tannatthaphon.online/og-cover.webp">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:site_name" content="คริสตจักรสาวกพระเยซูกรุงเทพ">
+  <meta property="og:locale" content="th_TH">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok)">
+  <meta name="twitter:description" content="นมัสการวันอาทิตย์ 10:00–12:00 น.">
+  <meta name="twitter:image" content="https://www.tannatthaphon.online/og-cover.webp">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="theme-color" content="#ffffff">
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <meta name="apple-mobile-web-app-title" content="JDM BKK">
+  <link rel="manifest" href="../assets/images/site.webmanifest">
+  <script src="../js/sdk.js"></script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Church",
+    "@id": "https://www.tannatthaphon.online/#church",
+    "name": "คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok)",
+    "alternateName": ["JDM Bangkok", "JDMBKK", "JDM TH"],
+    "description": "คริสตจักรท้องถิ่นย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.",
+    "url": "https://www.tannatthaphon.online/",
+    "logo": "https://www.tannatthaphon.online/logo.png",
+    "image": "https://www.tannatthaphon.online/cover.webp",
+    "telephone": "+66 92 552 0263",
+    "hasMap": "https://maps.google.com/?q=13.753303,100.619074",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "64 ซอยรามคำแหง 24 แยก 6 แขวงหัวหมาก เขตบางกะปิ",
+      "addressRegion": "Bangkok",
+      "postalCode": "10240",
+      "addressCountry": "TH"
+    },
+    "openingHoursSpecification": [{
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": "Sunday",
+      "opens": "10:00",
+      "closes": "12:00"
+    }],
+    "sameAs": [
+      "https://www.facebook.com/JDMBKKTH/",
+      "https://www.instagram.com/jdmbangkok/"
+    ]
+  }
+  </script>
+<link rel="stylesheet" href="https://www.tannatthaphon.online/css/style.css">
+<link rel="stylesheet" href="https://www.tannatthaphon.online/css/print.css" media="print">
+<link rel="stylesheet" href="https://www.tannatthaphon.online/css/variables.css">
+<link rel="stylesheet" href="https://www.tannatthaphon.online/css/home.css">
+  <style>@view-transition { navigation: auto; }</style>
     
     <style>
         .read-wrapper {
@@ -62,7 +125,22 @@
 <body>
 
     <!-- ✅ Include Header -->
-    <div data-include="components/header.html"></div>
+    <div data-include="https://www.tannatthaphon.online/partials/footer.html"></div>
+
+  <script>
+    
+  </script>
+  <script src="https://www.tannatthaphon.online/js/main.js"></script>
+  <script src="https://www.tannatthaphon.online/js/analytics.js"></script>
+  <script src="https://www.tannatthaphon.online/js/form-handler.js"></script>
+  <script src="https://www.tannatthaphon.online/js/sdk.js"></script>
+  <script src="https://www.tannatthaphon.online/smooth.js"></script>
+
+<script>
+  document.addEventListener('includesLoaded', () => {
+    console.log('header มาแล้ว ค่อยทำงานต่อ');
+  });
+</script>
 
     <main class="read-wrapper">
         <!-- พื้นที่แสดงเนื้อหาจากไฟล์รายสัปดาห์ -->
@@ -131,3 +209,4 @@ document.addEventListener('allIncludesLoaded', loadSermonDetail);
 </body>
 
 </html>
+
